# weather-app

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Dockerfile.prod  Makefile  README.md  dev-start.sh  docker-build.sh  docker-compose.test.yml  docker-compose.yml  docker-manage.sh  env.dev.template  env.example  env.prod.template  env.test.template  punchlist.md  pyproject.toml  pytest.ini  requirements.in  requirements.txt  validate_docker_environment.py  validate_environment.py
.cursor/rules/: project-rules.mdc
.github/workflows/: cd.yml  ci.yml  security-monitoring.yml
app/: __init__.py
app/database/: __init__.py  cache.py  connection.py  health.py
docker/postgres/: init-db.sql  init-test.sql  postgresql.conf
docker/redis/: redis.conf  redis.test.conf
docs/: DOCKER.md  DOCKER_COMPOSE.md  ENVIRONMENT_SETUP.md  product_brief.md  tech_spec.md
docs/implementation/: IMPLEMENTATION_SUMMARY_1.6.md  IMPLEMENTATION_SUMMARY_1.7.md  IMPLEMENTATION_SUMMARY_2.1.md
scripts/: pre-commit-docker.sh
tests/: conftest.py  test_database_connection.py  test_docker_environment.py  test_environment.py  test_github_actions.py  test_precommit_hooks.py
